--- a/web/index.html
+++ b/web/index.html
@@ -2,23 +2,16 @@
 <html>
 <head>
   <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
+    Base href placeholder for Flutter build
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/sspu-hackathon/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="AI-Based Timetable Generator Frontend">
+
+  <!-- Force desktop viewport -->
+  <meta name="viewport" content="width=1024, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -33,6 +26,20 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script>
+    // Optional: Warn mobile users
+    if (window.innerWidth < 800) {
+      document.body.innerHTML = `
+        <div style="display:flex; align-items:center; justify-content:center; height:100vh; text-align:center; font-family:sans-serif;">
+          <h2>⚠️ This app is optimized for desktop/web only.</h2>
+        </div>
+      `;
+    } else {
+      var script = document.createElement('script');
+      script.src = "flutter_bootstrap.js";
+      script.async = true;
+      document.body.appendChild(script);
+    }
+  </script>
 </body>
 </html>
